﻿drkns 19.09.2014 23:47:55 +0200 - build 4110

1. Разделим common.hpp на компоненты, а то совсем тёмный лес уже.

2. Не собиралось в gcc 4.8.1.

zg 19.09.2014 02:15:54 +0200 - build 4109

1. VE_CLOSE приходит в быстрый просмотр и информационную панель до удаления просмотра.

2. просмотр и редактор не удаляются во время обработки любых событий.

3. события от неактивных редакторов и просмотров могли не доходить до плагинов.

drkns 19.09.2014 01:29:27 +0200 - build 4108

1. Где-то между 4008 и 4012 немного погнулись регексы.

drkns 16.09.2014 23:49:54 +0200 - build 4107

1. Рефакторинг.

drkns 14.09.2014 18:38:33 +0200 - build 4106

1. Хендлы потоков асинхронной работы с БД закрывались не вовремя и могли накапливаться в неограниченном количестве.

drkns 14.09.2014 14:42:05 +0200 - build 4105

1. Рефакторинг.

drkns 14.09.2014 10:47:27 +0200 - build 4104

1. Уточнение 4100.

drkns 14.09.2014 02:11:01 +0200 - build 4103

1. Уточнение 4101.

zg 14.09.2014 01:46:47 +0200 - build 4102

1. уточнение 4100: повторный вызов DialogRun.

2. при переоткрытии файла в редакторе, из менеджера окон удалялось окно, которое не было предварительно туда добавлено.

drkns 14.09.2014 00:44:51 +0200 - build 4101

1. Уточнение 4100.

drkns 13.09.2014 22:50:49 +0200 - build 4100

1. При неудачном переключении из редактора в просмотр не освобождалась память.
   Добавлять очередной костыль бессмысленно, поэтому логика владения окнами переделана.
   Теперь нет окон на стеке, окон, удаляемых менеджером, ручного задавания способа удаления,
   ручной проверки успешности создания, ручного удаления при неудачах и прочего цирка.
   Каждое окно - это умный указатель и живёт столько, сколько нужно.
   Возможны причудливые баги, как обычно.

drkns 12.09.2014 00:57:26 +0200 - build 4099

1. 1. Добавлена поддержка атрибутов FILE_ATTRIBUTE_INTEGRITY_STREAM и FILE_ATTRIBUTE_NO_SCRUB_DATA.

zg 11.09.2014 00:27:32 +0200 - build 4098
